themes/barba/layout/components/chrome/_header.scss
.header,
[class*='header--'] {
  position: fixed;
  z-index: 100;
  top: 0;
  left: 0;
  background: $white;

  @include mq(nav) {
    background: transparent;
  }
}

.header__wrapper {
  display: flex;
  justify-content: space-between;
  overflow: hidden;
  width: 100vw;
  padding: $spacing;

  @include mq(m) {
    padding: $spacing * 2;
  }
}

.header__infos {
  display: flex;
  align-items: center;

  @include mq(m) {
    position: fixed;
  }
}

.header__infos__logo {
  margin-right: $spacing * 0.5;
}

.header__infos__version {
  @extend %ff-alt;

  color: $c-main;
  font-size: 1.1rem;

  [data-feature-order='0'] & {
    color: $c-menu-feature-0;
  }

  [data-feature-order='1'] & {
    color: $c-menu-feature-1;
  }

  [data-feature-order='2'] & {
    color: $c-menu-feature-2;
  }

  [data-feature-order='3'] & {
    color: $c-menu-feature-3;
  }

  [data-feature-order='4'] & {
    color: $c-menu-feature-4;
  }
}

.header__infos__docs {
  margin-left: 1rem;
  color: $c-main;
  font-size: 2rem;
}

.header__external-links {
  z-index: 1000;
  display: flex;

  @include mq(m) {
    position: fixed;
    right: 4rem;
  }
}

.header__external-links__github {
  position: relative;

  .is-open & {
    transform: translateX(calc(-100vw + 170px));

    @include mq(nav) {
      transform: translateX(-300px);
    }
  }
}

.header__nav {
  position: fixed;
  top: 0;
  right: 0;
  width: 100%;

  @include mq(nav) {
    width: auto;
  }
}

